--- a/config/config.json
+++ b/config/config.json
@@ -14,10 +14,10 @@
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": null,
+    "username": "q91d3w0la3p4xvcm",
+    "password": "sgs6vbg9bhoo0shx",
     "database": "database_production",
-    "host": "127.0.0.1",
+    "host": "ofcmikjy9x4lroa2.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "dialect": "mysql"
   }
 }
