--- a/config/config.json
+++ b/config/config.json
@@ -17,7 +17,7 @@
     "use_env_variable": "JAWSDB_URL",
     "username": "q91d3w0la3p4xvcm",
     "password": "sgs6vbg9bhoo0shx",
-    "database": "database_production",
+    "database": "yidxdx1iw11xjcx1",
     "host": "ofcmikjy9x4lroa2.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "dialect": "mysql"
   }
